--- a/.semaphore/semaphore.yml
+++ b/.semaphore/semaphore.yml
@@ -34,3 +34,8 @@ blocks:
         - name: Unit test
           commands:
             - npm run test
+promotions:
+  - name: Dockerize
+    pipeline_file: docker-build.yml
+    auto_promote_on:
+      - result: passed
