kubernetes deploy pipeline

--- a/.semaphore/docker-build.yml
+++ b/.semaphore/docker-build.yml
@@ -19,3 +19,8 @@ blocks:
             - docker pull "${DOCKER_USERNAME}/node-ci-cd-demo:latest" || true
             - docker build --cache-from "${DOCKER_USERNAME}/node-ci-cd-demo:latest" -t "${DOCKER_USERNAME}/node-ci-cd-demo:$SEMAPHORE_WORKFLOW_ID" .
             - docker push "${DOCKER_USERNAME}/node-ci-cd-demo:$SEMAPHORE_WORKFLOW_ID"
+promotions:
+  - name: Deploy to Kubernetes
+    pipeline_file: deploy-k8s.yml
+    auto_promote_on:
+      - result: passed
