comment out source & envsubst commands

--- a/.semaphore/deploy-k8s.yml
+++ b/.semaphore/deploy-k8s.yml
@@ -24,8 +24,8 @@ blocks:
       jobs:
         - name: Deploy
           commands:
-            - source $HOME/env-production
-            - envsubst < deployment.yaml | tee deploy.yml
+            # - source $HOME/env-production
+            # - envsubst < deployment.yaml | tee deploy.yml
             - kubectl apply -f deploy.yml
   - name: Tag latest release
     task:
